--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a href="volunteeryourtime.org"><img src="images/favicon.svg" alt="UNITED WAY" height="120" width="120"></a>
+        <a href="http://www.volunteeryourtime.org"><img src="images/favicon.svg" alt="UNITED WAY" height="120" width="120"></a>
       </div>
     </nav>
 <body>
